fix input behind keyboard ios

--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -28,6 +28,10 @@ ion-footer {
   height: 64px;
 }
 
+.hide {
+  display: none;
+}
+
 ion-footer::before {
   display: none !important;
 }
